# ChangeLog for dev-vcs/hg-git
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-vcs/hg-git/ChangeLog,v 1.58 2014/11/16 10:38:22 djc Exp $

*hg-git-0.7.0 (16 Nov 2014)

  16 Nov 2014; Dirkjan Ochtman <djc@gentoo.org> +hg-git-0.7.0.ebuild:
  Version bump hg-git to 0.7.0

  18 Aug 2014; Dirkjan Ochtman <djc@gentoo.org> -hg-git-0.4.0.ebuild:
  Remove old version

*hg-git-0.6.1 (18 Aug 2014)

  18 Aug 2014; Dirkjan Ochtman <djc@gentoo.org> +hg-git-0.6.1.ebuild:
  Version bump to 0.6.1

  09 Aug 2014; Chema Alonso <nimiux@gentoo.org> hg-git-0.5.0-r1.ebuild:
  Stable for amd64 wrt bug #511666

  26 Jul 2014; Pawel Hajdan jr <phajdan.jr@gentoo.org> hg-git-0.5.0-r1.ebuild:
  x86 stable wrt bug #511666

  28 May 2014; Dirkjan Ochtman <djc@gentoo.org> -hg-git-0.3.3.ebuild,
  -hg-git-0.3.4.ebuild, -hg-git-0.5.0.ebuild:
  Remove old versions

*hg-git-0.6.0 (28 May 2014)

  28 May 2014; Dirkjan Ochtman <djc@gentoo.org> +hg-git-0.6.0.ebuild:
  Version bump hg-git to 0.6.0

*hg-git-0.5.0-r1 (21 Jan 2014)

  21 Jan 2014; Ian Delaney <idella4@gentoo.org> +hg-git-0.5.0-r1.ebuild:
  revbump; convert to distutils-r1, patch by Nikoli in Bug #497300, ack by djc

*hg-git-0.5.0 (06 Jan 2014)

  06 Jan 2014; Fabian Groffen <grobian@gentoo.org> +hg-git-0.5.0.ebuild:
  Version bump, bug #496064

  25 Jun 2013; Agostino Sarubbo <ago@gentoo.org> hg-git-0.4.0.ebuild:
  Stable for amd64, wrt bug #472864

  25 Jun 2013; Agostino Sarubbo <ago@gentoo.org> hg-git-0.4.0.ebuild:
  Stable for x86, wrt bug #472864

  14 May 2013; Agostino Sarubbo <ago@gentoo.org> hg-git-0.3.4.ebuild:
  Stable for x86, wrt bug #468420

  03 May 2013; Agostino Sarubbo <ago@gentoo.org> hg-git-0.3.4.ebuild:
  Stable for amd64, wrt bug #468420

  03 May 2013; Dirkjan Ochtman <djc@gentoo.org> -hg-git-0.3.1.ebuild,
  -hg-git-0.3.2.ebuild:
  Remove old versions.

*hg-git-0.4.0 (03 May 2013)

  03 May 2013; Dirkjan Ochtman <djc@gentoo.org> +hg-git-0.4.0.ebuild: