@@ -9,23 +9,23 @@ DIST hg-git-0.7.0.tar.gz 42956 SHA256 9db9cd87b9b173c192b29336b4029122a4fe2858c3
 EBUILD hg-git-0.5.0-r1.ebuild 813 SHA256 e2e36da9c90bb849a05fe8a77ebe6ad67c26fb303f9a9771f571075c39f00ec6 SHA512 2fde975980790ce364501b426e9b459dca760c0bc1701e4ab6f2f66db6847ac2ae8ab185244293e4ece14b4096b2e0c7129eee774e7046450f43aec576844a9f WHIRLPOOL 7aa9d02569863e7c25daf0962f4ef2a5ba49efedc33e0f1cfaa05785826827d94d8e0b82515cedfb787117f357df41dd849f9075136e675aea2437d8e8f7e3d0
 EBUILD hg-git-0.6.0.ebuild 809 SHA256 44bb644f6630a3ab042b0cc886d21953b4c4025cffcdd24e43189ca44a8cd88b SHA512 1c8c046a5d701c9b1a30906b46ad5841e8e2dc585c904db353d305e645bb6ab192724d4aa72a0e8d42a90fbabe2e74bbb48384206c10ce1c7bc23795efe9f942 WHIRLPOOL a99578f130b53c7b67432fc40bdfc7e5a3bd77e7710f571e20c35c222b8f66b0fe6c226ceb38d3032d0fe74e3f0b043f7e7e0b6e872468360f61cf57f322a8ac
 EBUILD hg-git-0.6.1.ebuild 809 SHA256 4dd6e8668692271f976bbb8e1225b65a89d808268ae0c1be9a7ec23eec7c3dad SHA512 53658ff720e2e593181987e916d555c806feea544299287ac54d3d29d4ea3287d85bac01164123c755b7891d5a395746573169f2c531ad7adcacc0b70205c99b WHIRLPOOL cf847f1e85b7ebb3c0005bb3971b9e0558005e74c6427fb96f8a2666f0f27c3fad5006ad4ccaaa0bd83ec70950a7b4b7967367da20472268236a21ae2f19c1ab
-EBUILD hg-git-0.7.0.ebuild 809 SHA256 cd65468cb1c2b226f8434014a6d52bc12dcc5fccb4bd25a32b56e9027cc29481 SHA512 f91053b8b8da91febdb7a5e61b774400e470dd793eec360970baebdb3ae78ef6d976028e2dd95d145d46e22be5b2adfe692270b6a6a59085629e3d39d0920303 WHIRLPOOL ad60b468c604ae6dabd9805375752e3bdaaae1d766c5867222c6aad7af36fd9bcd6666395390ee706ef2f027a8074d23dd49fa6d83a10e5a817734dd479ed5c1
-MISC ChangeLog 8089 SHA256 137b4d20e7f38642ea3f8810ddb3925bb1782c3b9be642f36737c307e1d090ae SHA512 9dfe3776930fba36d1faed608ebbd949d9eb977727871818739bf602e8f4b6e4755809cc8c316ba188ec80f8683d2e5b63a2df8209e9a3779e55ddc4f138e123 WHIRLPOOL 9773767c98be5ac52edbb4b3cb8a6c83da9bc4139ad6bbd693f9225ffcd7b591f884c6f6d15f1099674bfd7c7480806a27631ea6ac6bb5371e32950bb60cf34b
+EBUILD hg-git-0.7.0.ebuild 808 SHA256 39ce38e2cf67fa895c3d759ea52e1d793b14913298c924552964c055537a7dfc SHA512 4620dec5212d8c6007c9b83c4233dfacf6da2cd21fbacf4374dc05291552d7b5a8ce12cabc5109d79d697fd8086a65476381ba4a2d563049b5c8ea0b13d68f73 WHIRLPOOL 5873dc3db29cf1b057cd7bab9b71ccee37f684d074bc685c8979ba3bc00a8c9a97e0f73aa990c599f4618a7caff19d10de8eb279c0728daa094297d87e0f11b3
+MISC ChangeLog 8196 SHA256 0f5e88c7cd6befd987ce0ff5210c35e0ad9706fe8f595a80a74c8b6c704ac28f SHA512 e980f711bb9306180efbc57a70001efb826dad695be9bf892c4515098f404e51f695cdf0255b33820fbf4dd7172411e9665ad5d9787c5d3f85fbd392648e4a83 WHIRLPOOL 41cc305101061d350de58ba53b4ca51b15273a4bd4551afb30f014508d7fb477cf8661a497320a2793028ba4cf6760d464e91ce5a851c3ce0894ed987a55b1e7
 MISC metadata.xml 395 SHA256 eba614753d7e95676086f73da49856e69f9bdbe5a6f933a9568b150c6bba0e53 SHA512 32270b4529cd2fcef105724fca9d462c3f9dc002e5469cd2c9fcd2f7e73b1a5af78b18228b0b938bec612fd77fc989ac3cd17bf2847d4f3fafac68f0356b2eaf WHIRLPOOL 15b9a9757855c020e31ad777fef412ca26b8ee52054a7d4d0c4ca72839764e505152da4f31c13358c4fafc9393aeb5acaab626afa38920b2fec803bc0541ccb1
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQIcBAEBCAAGBQJUaH+0AAoJEJ+WuSkwOAOBAB0P/A7Z41KcP8EAiWGC631WWgJZ
-Pf3jfhfqUqn0sd5QC3USkQGuUyTXyDADKJoCbiW8gV/yrPqL896ulbWZLT1pImDS
-nPNm7m6fJp4jFZmzQBdeeO/xH9eEDkwtjVe10xYhqyj91nZAvZQwAQIlvW59Kb/y
-K9JGYo5Szog9W5O3diCuVcELF3ukSZ6CHEeOHFfaKR5sCgleLc7k2noK3tUGwbzO
-R9KZmyzetCNc0vOyeYDDHRIRRM3eUsxUjF4/sanTvHvhx1u7+2czfXGSbI8u1HcM
-6LZMd8MrHzcbWpPkqWEy/IA3+47Dn6ntHcKT5YORcwvV/vp/wiT4qGOkEXUKYZyn
-LLSDxboiFsG6oWRImNzYVBfqxyv+UhScQfPg3uYfM5s5EoJ5HY9ldhYN62cQIQAQ
-lk1Aa0jSPXd53cir/a/XddranL1vUH/ZseJY02hyUC4UStDRKDLUYaemR+WfNKVF
-l0Ms72sLlRNm5gBdylP3Z4cbiDnJcAWzzQMrr1ai8j/JDldgtNuv347SM6Lu19R+
-G8S2f8ANsnFVjgUO21I14pg/+1uldiNxr/bNrHTKifyItDe8Mkjc00dg+aMZXcHe
-SAScukurzYT8/qzwsT5cDe09ElAlzVMfW2ZoHs7kMcI4xsXI5kxiv+nakCRmSA9X
-FMeqDX4UWplAtOe/QLkG
-=j+PT
+iQIcBAEBCAAGBQJUr9rGAAoJELp701BxlEWf90EP/347D1ZJQyqqvmh1dD2i50Bu
+Td0rrRx5mnWXe8iRdRMhiWuva9BHaTJNNk0XaqrDKAFpVlRKN3OuXp2pN39H9m71
+jZaG3pR2Gq23D+CnXshMcvHYjyi92NUvktIWNeEBuCXaG6DYmTZO6x+tsIUQ5KtN
+ytmZRLSxUVjKJ+y2ANwJ09KIz+1TGv0xutU/at+h4Uu8DSnzPvWF07f1rTTGdfVC
+egxbgR8qELmgdmB/deGmogzSCaDHqLgTSCpF5wq13HfCplwa0nv/ZR+5D6oN+hwt
+PxUanDS5luRueH7cimvZdkjatE0E+qlpnf4Z94EZchTDizdaqCrYT7EpaoECbbom
+1nQzQk5a+d9P20ZjVvtYpHrankegeP+/POEeM6757eoxqh9TyhYV1sn+VFzGfjOc
+FN1TeAZuuk0lQp+w2I3pO8pTGI5BuCQFxtKr35IeyOjp2pzNUBqxVICNSITDXNPP
+Ij1KPIvEWQgFZ0gWn6mN+ovvRQRcUHj9Ly4tklyuIS91HxdFXeRbSC0LMC7m9UGa
+W+w5x3mZ3CXQ840Zg2MFJU0brvET8VMJU0n9WFeVy8krxi9fWG7OVdkQJK/rngK0
+VC1DxQV4ggZWwnpu8gruOzb8JRiAmxfg8W15yyyr5SNDYE5KQf4huVm067R6CmrI
+20ZBF8/AODtEeBDHyTAr
+=f4OY
 -----END PGP SIGNATURE-----
