@@ -1,6 +1,9 @@
 # ChangeLog for dev-vcs/hg-git
-# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-vcs/hg-git/ChangeLog,v 1.58 2014/11/16 10:38:22 djc Exp $
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-vcs/hg-git/ChangeLog,v 1.59 2015/01/09 13:42:29 ago Exp $
+
+  09 Jan 2015; Agostino Sarubbo <ago@gentoo.org> hg-git-0.7.0.ebuild:
+  Stable for amd64, wrt bug #535412
 
 *hg-git-0.7.0 (16 Nov 2014)
 
